fix(FEC-8933): fix ads cover entire page
fix ads will cover the player

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 .playkit-ads-cover {
-  position: fixed;
+  position: relative;
   cursor: pointer;
   width: 100%;
   height: 100%;
